osx: Call finishLaunching on post-parse

https://bugzilla.gnome.org/show_bug.cgi?id=668801